musa_jason/src/java/musa/goalspec/GOALspecParser.java
// Generated from GOALspec.g4 by ANTLR 4.0
package musa.goalspec;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GOALspecParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		APOSTROPHE=1, PLUS=2, MINUS=3, STAR=4, SLASH=5, BACKSLASH=6, CARET=7, 
		TILDE=8, COLON=9, DOT=10, QMARK=11, HASH=12, DOLLAR=13, AMP=14, DIGIT=15, 
		Is=16, GOAL=17, SOCIAL=18, WHERE=19, SHALL_ADDRESS=20, AND=21, OR=22, 
		NOT=23, ON=24, AFTER=25, WHEN=26, SINCE=27, THE_SYSTEM=28, THE=29, ROLE=30, 
		COMMA=31, MESSAGE=32, RECEIVED_FROM=33, SENT_TO=34, ROUND_LEFT=35, ROUND_RIGHT=36, 
		SQUARE_LEFT=37, SQUARE_RIGHT=38, LOWERCASE_LETTER=39, UPPERCASE_LETTER=40, 
		D=41, M=42, P=43, Y=44, POSITIVEDIGIT=45, WS=46;
	public static final String[] tokenNames = {
		"<INVALID>", "'''", "'+'", "'-'", "'*'", "'/'", "'\\'", "'^'", "'~'", 
		"':'", "'.'", "'?'", "'#'", "'$'", "'&'", "DIGIT", "'IS'", "'GOAL'", "'SOCIAL'", 
		"'WHERE'", "'SHALL ADDRESS'", "'AND'", "'OR'", "'NOT'", "'ON'", "'AFTER'", 
		"'WHEN'", "'SINCE'", "'THE SYSTEM'", "'THE'", "'ROLE'", "','", "'MESSAGE'", 
		"'RECEIVED FROM'", "'SENT TO'", "'('", "')'", "'['", "']'", "LOWERCASE_LETTER", 
		"UPPERCASE_LETTER", "'D'", "'M'", "'P'", "'Y'", "POSITIVEDIGIT", "WS"
	};
	public static final int
		RULE_specification = 0, RULE_goal_list = 1, RULE_goal_type = 2, RULE_social_goal = 3, 
		RULE_system_goal = 4, RULE_goal_name = 5, RULE_social_goal_content = 6, 
		RULE_system_goal_content = 7, RULE_trigger_condition = 8, RULE_final_state = 9, 
		RULE_where_clause = 10, RULE_item_descriptions = 11, RULE_item_description = 12, 
		RULE_data = 13, RULE_data_item = 14, RULE_event = 15, RULE_state = 16, 
		RULE_message_sent_state = 17, RULE_message_received_state = 18, RULE_msgActor = 19, 
		RULE_actors_list = 20, RULE_actor = 21, RULE_predicate = 22, RULE_term_list = 23, 
		RULE_term = 24, RULE_structure = 25, RULE_atom = 26, RULE_list = 27, RULE_numeral = 28, 
		RULE_variable = 29, RULE_string = 30, RULE_characters = 31, RULE_character = 32, 
		RULE_digits = 33, RULE_special = 34;
	public static final String[] ruleNames = {
		"specification", "goal_list", "goal_type", "social_goal", "system_goal", 
		"goal_name", "social_goal_content", "system_goal_content", "trigger_condition", 
		"final_state", "where_clause", "item_descriptions", "item_description", 
		"data", "data_item", "event", "state", "message_sent_state", "message_received_state", 
		"msgActor", "actors_list", "actor", "predicate", "term_list", "term", 
		"structure", "atom", "list", "numeral", "variable", "string", "characters", 
		"character", "digits", "special"
	};

	@Override
	public String getGrammarFileName() { return "GOALspec.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GOALspecParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SpecificationContext extends ParserRuleContext {
		public Goal_listContext goal_list() {
			return getRuleContext(Goal_listContext.class,0);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitSpecification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitSpecification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_specification);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); goal_list(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Goal_listContext extends ParserRuleContext {
		public int _p;
		public Goal_listContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Goal_listContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_goal_list; }
	 
		public Goal_listContext() { }
		public void copyFrom(Goal_listContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class Many_goal_listContext extends Goal_listContext {
		public Goal_typeContext goal_type() {
			return getRuleContext(Goal_typeContext.class,0);
		}
		public Goal_listContext goal_list() {
			return getRuleContext(Goal_listContext.class,0);
		}
		public Many_goal_listContext(Goal_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterMany_goal_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitMany_goal_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitMany_goal_list(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Single_goal_listContext extends Goal_listContext {
		public Goal_typeContext goal_type() {
			return getRuleContext(Goal_typeContext.class,0);
		}
		public Single_goal_listContext(Goal_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterSingle_goal_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitSingle_goal_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitSingle_goal_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Goal_listContext goal_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Goal_listContext _localctx = new Goal_listContext(_ctx, _parentState, _p);
		Goal_listContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, RULE_goal_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Single_goal_listContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(73); goal_type();
			}
			_ctx.stop = _input.LT(-1);
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Many_goal_listContext(new Goal_listContext(_parentctx, _parentState, _p));
					pushNewRecursionContext(_localctx, _startState, RULE_goal_list);
					setState(75);
					if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
					setState(76); goal_type();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Goal_typeContext extends ParserRuleContext {
		public Social_goalContext social_goal() {
			return getRuleContext(Social_goalContext.class,0);
		}
		public System_goalContext system_goal() {
			return getRuleContext(System_goalContext.class,0);
		}
		public Goal_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterGoal_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitGoal_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitGoal_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Goal_typeContext goal_type() throws RecognitionException {
		Goal_typeContext _localctx = new Goal_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_goal_type);
		try {
			setState(84);
			switch (_input.LA(1)) {
			case SOCIAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(82); social_goal();
				}
				break;
			case GOAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(83); system_goal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Social_goalContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(GOALspecParser.COLON, 0); }
		public TerminalNode SOCIAL() { return getToken(GOALspecParser.SOCIAL, 0); }
		public Goal_nameContext goal_name() {
			return getRuleContext(Goal_nameContext.class,0);
		}
		public Social_goal_contentContext social_goal_content() {
			return getRuleContext(Social_goal_contentContext.class,0);
		}
		public TerminalNode GOAL() { return getToken(GOALspecParser.GOAL, 0); }
		public Social_goalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_social_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterSocial_goal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitSocial_goal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitSocial_goal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Social_goalContext social_goal() throws RecognitionException {
		Social_goalContext _localctx = new Social_goalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_social_goal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); match(SOCIAL);
			setState(87); match(GOAL);
			setState(88); goal_name();
			setState(89); match(COLON);
			setState(90); social_goal_content();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class System_goalContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(GOALspecParser.COLON, 0); }
		public System_goal_contentContext system_goal_content() {
			return getRuleContext(System_goal_contentContext.class,0);
		}
		public Goal_nameContext goal_name() {
			return getRuleContext(Goal_nameContext.class,0);
		}
		public TerminalNode GOAL() { return getToken(GOALspecParser.GOAL, 0); }
		public System_goalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_system_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterSystem_goal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitSystem_goal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitSystem_goal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final System_goalContext system_goal() throws RecognitionException {
		System_goalContext _localctx = new System_goalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_system_goal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(GOAL);
			setState(93); goal_name();
			setState(94); match(COLON);
			setState(95); system_goal_content();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Goal_nameContext extends ParserRuleContext {
		public CharactersContext characters() {
			return getRuleContext(CharactersContext.class,0);
		}
		public Goal_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterGoal_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitGoal_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitGoal_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Goal_nameContext goal_name() throws RecognitionException {
		Goal_nameContext _localctx = new Goal_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_goal_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); characters();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Social_goal_contentContext extends ParserRuleContext {
		public Final_stateContext final_state() {
			return getRuleContext(Final_stateContext.class,0);
		}
		public TerminalNode SHALL_ADDRESS() { return getToken(GOALspecParser.SHALL_ADDRESS, 0); }
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Actors_listContext actors_list() {
			return getRuleContext(Actors_listContext.class,0);
		}
		public Trigger_conditionContext trigger_condition() {
			return getRuleContext(Trigger_conditionContext.class,0);
		}
		public Social_goal_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_social_goal_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterSocial_goal_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitSocial_goal_content(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitSocial_goal_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Social_goal_contentContext social_goal_content() throws RecognitionException {
		Social_goal_contentContext _localctx = new Social_goal_contentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_social_goal_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); trigger_condition(0);
			setState(100); actors_list();
			setState(101); match(SHALL_ADDRESS);
			setState(102); final_state(0);
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(103); where_clause();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class System_goal_contentContext extends ParserRuleContext {
		public Final_stateContext final_state() {
			return getRuleContext(Final_stateContext.class,0);
		}
		public TerminalNode SHALL_ADDRESS() { return getToken(GOALspecParser.SHALL_ADDRESS, 0); }
		public Trigger_conditionContext trigger_condition() {
			return getRuleContext(Trigger_conditionContext.class,0);
		}
		public ActorContext actor() {
			return getRuleContext(ActorContext.class,0);
		}
		public System_goal_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_system_goal_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterSystem_goal_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitSystem_goal_content(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitSystem_goal_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final System_goal_contentContext system_goal_content() throws RecognitionException {
		System_goal_contentContext _localctx = new System_goal_contentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_system_goal_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); trigger_condition(0);
			setState(107); actor();
			setState(108); match(SHALL_ADDRESS);
			setState(109); final_state(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Trigger_conditionContext extends ParserRuleContext {
		public int _p;
		public Trigger_conditionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Trigger_conditionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_trigger_condition; }
	 
		public Trigger_conditionContext() { }
		public void copyFrom(Trigger_conditionContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class Neg_conditionContext extends Trigger_conditionContext {
		public TerminalNode NOT() { return getToken(GOALspecParser.NOT, 0); }
		public Trigger_conditionContext trigger_condition() {
			return getRuleContext(Trigger_conditionContext.class,0);
		}
		public Neg_conditionContext(Trigger_conditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterNeg_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitNeg_condition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitNeg_condition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class And_conditionContext extends Trigger_conditionContext {
		public Trigger_conditionContext trigger_condition(int i) {
			return getRuleContext(Trigger_conditionContext.class,i);
		}
		public TerminalNode AND() { return getToken(GOALspecParser.AND, 0); }
		public List<Trigger_conditionContext> trigger_condition() {
			return getRuleContexts(Trigger_conditionContext.class);
		}
		public And_conditionContext(Trigger_conditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterAnd_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitAnd_condition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitAnd_condition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Sub_conditionContext extends Trigger_conditionContext {
		public TerminalNode ROUND_LEFT() { return getToken(GOALspecParser.ROUND_LEFT, 0); }
		public TerminalNode ROUND_RIGHT() { return getToken(GOALspecParser.ROUND_RIGHT, 0); }
		public Trigger_conditionContext trigger_condition() {
			return getRuleContext(Trigger_conditionContext.class,0);
		}
		public Sub_conditionContext(Trigger_conditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterSub_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitSub_condition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitSub_condition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Or_conditionContext extends Trigger_conditionContext {
		public Trigger_conditionContext trigger_condition(int i) {
			return getRuleContext(Trigger_conditionContext.class,i);
		}
		public List<Trigger_conditionContext> trigger_condition() {
			return getRuleContexts(Trigger_conditionContext.class);
		}
		public TerminalNode OR() { return getToken(GOALspecParser.OR, 0); }
		public Or_conditionContext(Trigger_conditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterOr_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitOr_condition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GOALspecVisitor ) return ((GOALspecVisitor<? extends T>)visitor).visitOr_condition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Event_definitionContext extends Trigger_conditionContext {
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public Event_definitionContext(Trigger_conditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).enterEvent_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GOALspecListener ) ((GOALspecListener)listener).exitEvent_definition(this);
		}
		@Override
